src/components/UI/Title_Panel/style.css
@media only screen and (max-width: 767px) {
  #titleUserName {
    display: none;
  }
}
/* @media only screen and (max-width: 500px) {
   #loginButton {
    background-color: yellow;
  }
  #signUpButton {
    background-color: yellow;
  } 
} */
@media only screen and (max-width: 320px) {
  .rootStyles {
    margin-left: auto;
    margin-right: auto;
    width: 320px;
  }
}

.headerStyle {
  /* background-color: #54585a; */
  background-color: #008AC5;
  color: white;
  font-size: 24px;
  position: fixed;
  top:0%;
  height: 60px;
  width: 100%;
  -webkit-transition: background 0.2s;
  transition: background 0.2s;
  color: white;
  padding: 16px;
  font-size: 24px;
}.header-down{
  border-bottom: solid 1px rgba(0, 0, 0, 0.3);
  background: #fff;
}
.header-down ul li{
  color:#383838;
}

.empty_pannel{
  height: 92px;
}

